# grs

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: Findcheck.cmake  Findlibevent.cmake  Findlibgit2.cmake  Findlibssh.cmake
grsd/: CMakeLists.txt
src/: CMakeLists.txt
src/extension/: CMakeLists.txt  command.h  core.c  extensions.h
src/extension/core/: CMakeLists.txt  core.c  core.h
src/extension/git/: CMakeLists.txt  capabilities.c  capabilities.h  checksum.c  checksum.h  compress.c  compress.h  git.c  git.h  libgit2.c  libgit2.h  packfile_negotiation.c  packfile_transfer.c  pkt_line.c  pkt_line.h  protocol.c  protocol.h  reference_discovery.c  report_status.c  update_request.c
src/grsd/: CMakeLists.txt  io.c  io.h  main.c  session_list.c  session_list.h
src/libgrs/: CMakeLists.txt  binbuf.c  binbuf.h  buffer.c  buffer.h  grs.c  grs.h  session.c
src/libgrs/cmd/: CMakeLists.txt  command.c  command.h
src/libgrs/core/: CMakeLists.txt  acl.h  buffer.h  grs.h  log.c  session.c  session.h
src/libgrsd/: CMakeLists.txt  _session.h  acl.c  acl.h  buffer.c  buffer.h  grs.c  grs.h  grsd.c  grsd.h  handler.h  handler_pipe.c  handler_session.c  handler_sshbind.c  itypes.h  log.c  log.h  process.c  process.h  session.c  session.h  session2.c  session2.h  slist.c  slist.h  types.h
test/: CMakeLists.txt  grs_test.c  hostkey.c  hostkey.h  libssh.c  libssh_proxy.c  libssh_proxy.h  suite.c
test/ext_core/: suite.c  tests.c
test/ext_git/: capabilities_tests.c  checksum_tests.c  compress_tests.c  extension_tests.c  packfile_negotiation_tests.c  packfile_transfer_tests.c  pkt_line_tests.c  protocol_tests.c  reference_discovery_tests.c  report_status_tests.c  suite.c  update_request_tests.c
test/integration/: clone.rb  clone_empty.rb  grs_info.rb  ls_remote.rb  pull.rb  push_empty.rb
test/integration/grs/: assert.rb  git_wrapper.rb  ssh_wrapper.rb
test/libcore/: acl_tests.c  buffer_tests.c  grs_tests.c  session_tests.c
test/libgrs/: acl_tests.c  binbuf_tests.c  buffer_tests.c  grs_tests.c  session_tests.c  suite.c
test/libgrsd/: CMakeLists.txt  acl_tests.c  buffer_tests.c  grs_tests.c  grsd_tests.c  handle_pipe_tests.c  handle_session_tests.c  handle_sshbind_tests.c  libgrsd_tests.c  libssh_proxy.c  libssh_proxy.h  process_tests.c  session2_tests.c  session_tests.c  slist_tests.c  suite.c
